@@ -1,3 +1,8 @@
+TAG: curatoralleleload-6-0-20-3
+DATE:  06/07/2022
+STAFF: sc
+CHANGES: CREAM project - better bcp error handling
+
 TAG: curatoralleleload-6-0-20-2
 TAG: curatoralleleload-6-0-20-1
 DATE:  06/06/2022
